--- a/style.css
+++ b/style.css
@@ -1,66 +1,66 @@
 /*Navigation Bar*/
 .navbar
 {
-list-style: none;
-background-image: linear-gradient(blue, darkBlue);
-overflow: hidden;
-padding: 0;
-margin: 0;
+list-style:none;
+background-image:linear-gradient(blue,darkBlue);
+overflow:hidden;
+padding:0;
+margin:0;
 }
 .navbar a, .dropdown div
 {
-text-decoration: none;
-color: white;
-font-size: 24px;
-padding: 16px;
-display: inline-block;
+text-decoration:none;
+color:white;
+font-size:24px;
+padding:16px;
+display:inline-block;
 }
 .navbar li
 {
-float: left;
+float:left;
 }
 .navbar li:hover
 {
-background-color: darkBlue;
+background-color:darkBlue;
 }
 .dropdown-content
 {
-list-style: none;
-padding: 0;
-display: none;
-position: absolute;
-z-index: 1;
-background-color: blue;
+list-style:none;
+padding:0;
+display:none;
+position:absolute;
+z-index:1;
+background-color:blue;
 }
 .dropdown-content li
 {
-float: none;
+float:none;
 }
 .dropdown:hover .dropdown-content
 {
-display: block;
+display:block;
 }
 .active
 {
-background-image: linear-gradient(darkBlue, blue);
+background-image:linear-gradient(darkBlue, blue);
 }
 
 /*Body*/
 table, tr, td
 {
-background-color: lightGray;
-padding: 8px;
-border: 2px solid black;
-border-collapse: collapse;
-margin: 16px;
+background-color:rgb(200,200,200);
+padding:8px;
+border:2px solid black;
+border-collapse:collapse;
+margin:16px;
 }
 h1, h2, h3, h4, h5, h6, p
 {
-margin-left: 016px;
+margin-left:016px;
 }
 body
 {
-margin: 0;
+margin:0;
 }
 blockquote
 {
