--- a/style.css
+++ b/style.css
@@ -67,3 +67,16 @@ blockquote
 padding:0;
 margin:0
 }
+img
+{
+    max-width: 100%;
+    height: auto;
+}
+.rotateImg180
+{
+    -webkit-transform:rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
